--- a/Neil_Rathi/ramen.html
+++ b/Neil_Rathi/ramen.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Ramen Website-Mini Task</title>
+	<title>Ramen website-Mini task</title>
 	<link rel="stylesheet" type="text/css" href="ramen.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 	<link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet">
@@ -9,7 +9,7 @@
 	
 </head>
 <body>
- <h1>World of top Ramen</h1>
+ <h1>World of Top Ramen</h1>
 
  	<div id="container">
  		<ul>
@@ -41,8 +41,9 @@
  		</li>
  		<li>
  			</select>
- 		<select id="topten" onchange="topten()" class="dropbtn">
+ 		<select id="topten" onchange="countr()" class="dropbtn">
  		<option value="none" selected disabled hidden> top 10 appearance by year</option>
+ 		<option>none</option>
  		<option>2016</option>
  		<option>2015</option>
  		<option>2014</option>
@@ -51,7 +52,6 @@
  		</select>
  		</li>
  		</ul>
- 
 
  	</div>
 
