--- a/Chirayu_Rathi/cctask1.html
+++ b/Chirayu_Rathi/cctask1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Bootstrap Example</title>
+  <title>Spotramen</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="cctask.css">
@@ -9,19 +9,26 @@
   <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;1,200&display=swap" rel="stylesheet">
+
 </head>
 <body>
 <nav>
-    <ul>
-      <li><span style="font-size:1em ;color:white; margin-left:10px;">
+      <span style="font-size:1em ;color:white; margin-left:10px;">
         <i class="fas fa-utensils"></i>
-        <a href="#" style="font-family:'Pacifico', cursive;">SpotRamen</a>
-      </span></li>
+        <a style="font-family:'Pacifico', cursive;">SpotRamen</a>
+      </span>
+      <ul>
       <li ><a href="#home" class="home-mark active">Home</a></li>
       <li ><a href="#topten" class="topten-mark"> #TopTen</a></li>
       <li ><a href="#country" class="country-mark">country</a></li>
       <li ><a href="#hotspots" class="hotspots-mark">hotspots</a></li>
     </ul>
+    <div class="burger">
+      <div class="line1"></div>
+      <div class="line2"></div>
+      <div class="line3"></div>
+    </div>
 </nav>
 <div class="sec home" id="home">
   <div class="carousel-container">
@@ -37,11 +44,78 @@
   </div>
   <a href="#topten" class="scrollD"><i class="fas fa-arrow-circle-down"></i></a>
 </div>
-<div class="sec topten" id="topten"></div>
-<div class="sec country" id="country"></div>
-<div class="sec hotspots" id="hotspots"></div>
+<div class="sec topten" id="topten">
+  <div class="year-container">
+    <div class="yeartag yeartag-active">2012</div>
+    <div class="yeartag">2013</div>
+    <div class="yeartag">2014</div>
+    <div class="yeartag">2015</div>
+    <div class="yeartag">2016</div>
+  </div>
+  <div class="tencontainer"></div>
+  <a href="#country" class="scrollD"><i class="fas fa-arrow-circle-down"></i></a>
+</div>
+<div class="sec country" id="country">
+  <div class="country-list">
+      <div class="country-wrapper">
+        <div class="country-headder"><h3>Myanmar</h3></div>
+        <div class="country-content"></div>
+      </div>
+      <div class="country-wrapper">
+        <div class="country-headder"><h3>USA</h3></div>
+        <div class="country-content"></div>
+      </div>
+      <div class="country-wrapper">
+        <div class="country-headder"><h3>Singapore</h3></div>
+        <div class="country-content"></div>
+      </div>
+      <div class="country-wrapper">
+        <div class="country-headder"><h3>Japan</h3></div>
+        <div class="country-content"></div>
+      </div>
+      <div class="country-wrapper">
+        <div class="country-headder"><h3>Thailand</h3></div>
+        <div class="country-content"></div>
+      </div>
+      <div class="country-wrapper">
+        <div class="country-headder"><h3>Taiwan</h3></div>
+        <div class="country-content"></div>
+      </div>
+      <div class="country-wrapper">
+        <div class="country-headder"><h3>China</h3></div>
+        <div class="country-content"></div>
+      </div>
+      <div class="country-wrapper">
+        <div class="country-headder"><h3>Hong Kong</h3></div>
+        <div class="country-content"></div>
+      </div>  
+      <div class="country-wrapper">
+        <div class="country-headder"><h3>Indonesia</h3></div>
+        <div class="country-content"></div>
+      </div>
+      <div class="country-wrapper">
+        <div class="country-headder"><h3>Malaysia</h3></div>
+        <div class="country-content"></div>
+      </div>
+  </div>
+  <a href="#hotspots" class="scrollD"><i class="fas fa-arrow-circle-down"></i></a>
+</div>
+<div class="sec hotspots" id="hotspots">
+  <form onsubmit="return false">
+    <input type="text" onkeyup="searchlist()" value='' placeholder="Enter brand name">
+    <div class="drop">
+      <button>Sort by</button>
+    <ul>
+      <li>Brand</li>
+      <li>Country</li>
+      <li>Stars</li>
+    </ul>
+    </div>
+  </form>
+  <div class="hotspots-container">
+  </div>
+</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="cctask1.js" type="text/javascript"></script>
-
 </body>
 </html>
