--- a/Chirayu_Rathi/cctask1.html
+++ b/Chirayu_Rathi/cctask1.html
@@ -19,10 +19,10 @@
         <a style="font-family:'Pacifico', cursive;">SpotRamen</a>
       </span>
       <ul>
-      <li ><a href="#home" class="home-mark active">Home</a></li>
-      <li ><a href="#topten" class="topten-mark"> #TopTen</a></li>
-      <li ><a href="#country" class="country-mark">country</a></li>
-      <li ><a href="#hotspots" class="hotspots-mark">hotspots</a></li>
+      <li ><a href="#home" class="home-mark active scroll">Home</a></li>
+      <li ><a href="#topten" class="topten-mark scroll"> #TopTen</a></li>
+      <li ><a href="#country" class="country-mark scroll">country</a></li>
+      <li ><a href="#hotspots" class="hotspots-mark scroll">hotspots</a></li>
     </ul>
     <div class="burger">
       <div class="line1"></div>
@@ -42,7 +42,7 @@
       <img id="firstc" src="https://images.unsplash.com/photo-1517248135467-4c7edcad34c4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="">
     </div>
   </div>
-  <a href="#topten" class="scrollD"><i class="fas fa-arrow-circle-down"></i></a>
+  <a href="#topten" class="scrollD scroll"><i class="fas fa-arrow-circle-down"></i></a>
 </div>
 <div class="sec topten" id="topten">
   <div class="year-container">
@@ -53,7 +53,7 @@
     <div class="yeartag">2016</div>
   </div>
   <div class="tencontainer"></div>
-  <a href="#country" class="scrollD"><i class="fas fa-arrow-circle-down"></i></a>
+  <a href="#country" class="scrollD scroll"><i class="fas fa-arrow-circle-down"></i></a>
 </div>
 <div class="sec country" id="country">
   <div class="country-list">
@@ -98,7 +98,7 @@
         <div class="country-content"></div>
       </div>
   </div>
-  <a href="#hotspots" class="scrollD"><i class="fas fa-arrow-circle-down"></i></a>
+  <a href="#hotspots" class="scrollD scroll"><i class="fas fa-arrow-circle-down"></i></a>
 </div>
 <div class="sec hotspots" id="hotspots">
   <form onsubmit="return false">
