updated for responsivity

--- a/Neil_Rathi/ramen.html
+++ b/Neil_Rathi/ramen.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 	<title>Ramen website-Mini task</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="HandheldFriendly" content="true">
 	<link rel="stylesheet" type="text/css" href="ramen.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 	<link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet">
