arow and and flip fixes

--- a/Chirayu_Rathi/cctask1.html
+++ b/Chirayu_Rathi/cctask1.html
@@ -58,43 +58,43 @@
 <div class="sec country" id="country">
   <div class="country-list">
       <div class="country-wrapper">
-        <div class="country-headder"><h3>Myanmar</h3></div>
+        <div class="country-headder"><h3>Myanmar</h3><i class="fas fa-chevron-circle-right"></i></div>
         <div class="country-content"></div>
       </div>
       <div class="country-wrapper">
-        <div class="country-headder"><h3>USA</h3></div>
+        <div class="country-headder"><h3>USA</h3><i class="fas fa-chevron-circle-right"></i></div>
         <div class="country-content"></div>
       </div>
       <div class="country-wrapper">
-        <div class="country-headder"><h3>Singapore</h3></div>
+        <div class="country-headder"><h3>Singapore</h3><i class="fas fa-chevron-circle-right"></i></div>
         <div class="country-content"></div>
       </div>
       <div class="country-wrapper">
-        <div class="country-headder"><h3>Japan</h3></div>
+        <div class="country-headder"><h3>Japan</h3><i class="fas fa-chevron-circle-right"></i></div>
         <div class="country-content"></div>
       </div>
       <div class="country-wrapper">
-        <div class="country-headder"><h3>Thailand</h3></div>
+        <div class="country-headder"><h3>Thailand</h3><i class="fas fa-chevron-circle-right"></i></div>
         <div class="country-content"></div>
       </div>
       <div class="country-wrapper">
-        <div class="country-headder"><h3>Taiwan</h3></div>
+        <div class="country-headder"><h3>Taiwan</h3><i class="fas fa-chevron-circle-right"></i></div>
         <div class="country-content"></div>
       </div>
       <div class="country-wrapper">
-        <div class="country-headder"><h3>China</h3></div>
+        <div class="country-headder"><h3>China</h3><i class="fas fa-chevron-circle-right"></i></div>
         <div class="country-content"></div>
       </div>
       <div class="country-wrapper">
-        <div class="country-headder"><h3>Hong Kong</h3></div>
+        <div class="country-headder"><h3>Hong Kong</h3><i class="fas fa-chevron-circle-right"></i></div>
         <div class="country-content"></div>
       </div>  
       <div class="country-wrapper">
-        <div class="country-headder"><h3>Indonesia</h3></div>
+        <div class="country-headder"><h3>Indonesia</h3><i class="fas fa-chevron-circle-right"></i></div>
         <div class="country-content"></div>
       </div>
       <div class="country-wrapper">
-        <div class="country-headder"><h3>Malaysia</h3></div>
+        <div class="country-headder"><h3>Malaysia</h3><i class="fas fa-chevron-circle-right"></i></div>
         <div class="country-content"></div>
       </div>
   </div>
@@ -104,7 +104,7 @@
   <form onsubmit="return false">
     <input type="text" onkeyup="searchlist()" value='' placeholder="Enter brand name">
     <div class="drop">
-      <button>Sort by</button>
+      <button>Sort by <i style="font-size: 1.2em"class="fas fa-sort-down"></i></button>
     <ul>
       <li>Brand</li>
       <li>Country</li>
