--- a/Shouryan_Sharma/top ramen - Copy/index.html
+++ b/Shouryan_Sharma/top ramen - Copy/index.html
@@ -2,23 +2,10 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title></title>
+	<title>Top Rahmen</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<script type="text/javascript">
-	
-		const xhr = new XMLHttpRequest();
-		
-		xhr.onload = function(){
-			console.log(this.response)
-		};
-		
-		xhr.open('get','https://neilrathi17.github.io/test1/ramen.json');
-	
-		xhr.send();
-		let brand = 
-		</script>
 	<div class="content">
 	    <div class="navbar">
 		   <div class="left">
@@ -30,7 +17,7 @@
 			    </div>
 		   </div>
 	        <div class="right">
-		        <input type="text" placeholder="Search..">
+		        <input class="Searchbar" onkeyup="search()" name="search" type="text" placeholder=" Search..">
 		    </div>
 		</div>
 		</div>
@@ -41,10 +28,14 @@
 				</div>
 			<div class="img-content">
 				<div class="name">
-					<h2>Name of Product</h2>
 				</div>
 				<div class="description">
-					<p>Country<br>Rating</p>
+					<p>Variety :<p class="variety"></p><br><br>
+					   Style :<p class = "style"></p><br><br>
+					   Country :<p class = "country"></p><br><br>
+					   Stars :<p class = "stars"></p><br><br>
+					   Top10 :<p class = "topten"></p>	
+					</p>
 				</div>
 			</div>
 			</div>
@@ -53,10 +44,14 @@
 				</div>
 			<div class="img-content">
 				<div class="name">
-					<h2>Name of Product</h2>
 				</div>
 				<div class="description">
-					<p>Country<br>Rating</p>
+					<p>Variety :<p class="variety"></p><br><br>
+					   Style :<p class = "style"></p><br><br>
+					   Country :<p class = "country"></p><br><br>
+					   Stars :<p class = "stars"></p><br><br>
+					   Top10 :<p class = "topten"></p>	
+					</p>
 				</div>
 			</div>
 			</div>
@@ -65,10 +60,14 @@
 				</div>
 			<div class="img-content">
 				<div class="name">
-					<h2>Name of Product</h2>
 				</div>
 				<div class="description">
-					<p>Country<br>Rating</p>
+					<p>Variety :<p class="variety"></p><br><br>
+					   Style :<p class = "style"></p><br><br>
+					   Country :<p class = "country"></p><br><br>
+					   Stars :<p class = "stars"></p><br><br>
+					   Top10 :<p class = "topten"></p>	
+					</p>
 				</div>
 			</div>
 			</div>
@@ -77,10 +76,14 @@
 				</div>
 			<div class="img-content">
 				<div class="name">
-					<h2>Name of Product</h2>
 				</div>
 				<div class="description">
-					<p>Country<br>Rating</p>
+					<p>Variety :<p class="variety"></p><br><br>
+					   Style :<p class = "style"></p><br><br>
+					   Country :<p class = "country"></p><br><br>
+					   Stars :<p class = "stars"></p><br><br>
+					   Top10 :<p class = "topten"></p>	
+					</p>
 				</div>
 			</div>
 			</div>
@@ -89,10 +92,14 @@
 				</div>
 			<div class="img-content">
 				<div class="name">
-					<h2>Name of Product</h2>
 				</div>
 				<div class="description">
-					<p>Country<br>Rating</p>
+					<p>Variety :<p class="variety"></p><br><br>
+					   Style :<p class = "style"></p><br><br>
+					   Country :<p class = "country"></p><br><br>
+					   Stars :<p class = "stars"></p><br><br>
+					   Top10 :<p class = "topten"></p>	
+					</p>
 				</div>
 			</div>
 			</div>
@@ -101,10 +108,14 @@
 				</div>
 			<div class="img-content">
 				<div class="name">
-					<h2>Name of Product</h2>
 				</div>
 				<div class="description">
-					<p>Country<br>Rating</p>
+					<p>Variety :<p class="variety"></p><br><br>
+					   Style :<p class = "style"></p><br><br>
+					   Country :<p class = "country"></p><br><br>
+					   Stars :<p class = "stars"></p><br><br>
+					   Top10 :<p class = "topten"></p>	
+					</p>
 				</div>
 			</div>
 			</div>
@@ -113,10 +124,14 @@
 				</div>
 			<div class="img-content">
 				<div class="name">
-					<h2>Name of Product</h2>
 				</div>
 				<div class="description">
-					<p>Country<br>Rating</p>
+					<p>Variety :<p class="variety"></p><br><br>
+					   Style :<p class = "style"></p><br><br>
+					   Country :<p class = "country"></p><br><br>
+					   Stars :<p class = "stars"></p><br><br>
+					   Top10 :<p class = "topten"></p>	
+					</p>
 				</div>
 			</div>
 			</div>
@@ -125,10 +140,14 @@
 				</div>
 			<div class="img-content">
 				<div class="name">
-					<h2>Name of Product</h2>
 				</div>
 				<div class="description">
-					<p>Country<br>Rating</p>
+					<p>Variety :<p class="variety"></p><br><br>
+					   Style :<p class = "style"></p><br><br>
+					   Country :<p class = "country"></p><br><br>
+					   Stars :<p class = "stars"></p><br><br>
+					   Top10 :<p class = "topten"></p>	
+					</p>
 				</div>
 			</div>
 			</div>
@@ -137,10 +156,14 @@
 				</div>
 			<div class="img-content">
 				<div class="name">
-					<h2>Name of Product</h2>
 				</div>
 				<div class="description">
-					<p>Country<br>Rating</p>
+					<p>Variety :<p class="variety"></p><br><br>
+					   Style :<p class = "style"></p><br><br>
+					   Country :<p class = "country"></p><br><br>
+					   Stars :<p class = "stars"></p><br><br>
+					   Top10 :<p class = "topten"></p>	
+					</p>
 				</div>
 			</div>
 			</div>
@@ -149,10 +172,14 @@
 				</div>
 			<div class="img-content">
 				<div class="name">
-					<h2>Name of Product</h2>
 				</div>
 				<div class="description">
-					<p>Country<br>Rating</p>
+					<p>Variety :<p class="variety"></p><br><br>
+					   Style :<p class = "style"></p><br><br>
+					   Country :<p class = "country"></p><br><br>
+					   Stars :<p class = "stars"></p><br><br>
+					   Top10 :<p class = "topten"></p>	
+					</p>
 				</div>
 			</div>
 			</div>
@@ -161,19 +188,435 @@
 				</div>
 			<div class="img-content">
 				<div class="name">
-					<h2>Name of Product</h2>
 				</div>
 				<div class="description">
-					<p>Country<br>Rating</p>
+					<p>Variety :<p class="variety"></p><br><br>
+					   Style :<p class = "style"></p><br><br>
+					   Country :<p class = "country"></p><br><br>
+					   Stars :<p class = "stars"></p><br><br>
+					   Top10 :<p class = "topten"></p>	
+					</p>
+				</div>
+			</div>
+			</div>
+			<div class="item">
+				<div class="img-bg" style="background-image:url(images/5571.jpg);">
+				</div>
+			<div class="img-content">
+				<div class="name">
+				</div>
+				<div class="description">
+					<p>Variety :<p class="variety"></p><br><br>
+					   Style :<p class = "style"></p><br><br>
+					   Country :<p class = "country"></p><br><br>
+					   Stars :<p class = "stars"></p><br><br>
+					   Top10 :<p class = "topten"></p>	
+					</p>
+				</div>
+			</div>
+			</div>
+			<div class="item">
+				<div class="img-bg" style="background-image:url(images/5571.jpg);">
+				</div>
+			<div class="img-content">
+				<div class="name">
+				</div>
+				<div class="description">
+					<p>Variety :<p class="variety"></p><br><br>
+					   Style :<p class = "style"></p><br><br>
+					   Country :<p class = "country"></p><br><br>
+					   Stars :<p class = "stars"></p><br><br>
+					   Top10 :<p class = "topten"></p>	
+					</p>
+				</div>
+			</div>
+			</div>
+			<div class="item">
+				<div class="img-bg" style="background-image:url(images/5571.jpg);">
+				</div>
+			<div class="img-content">
+				<div class="name">
+				</div>
+				<div class="description">
+					<p>Variety :<p class="variety"></p><br><br>
+					   Style :<p class = "style"></p><br><br>
+					   Country :<p class = "country"></p><br><br>
+					   Stars :<p class = "stars"></p><br><br>
+					   Top10 :<p class = "topten"></p>	
+					</p>
+				</div>
+			</div>
+			</div>
+			<div class="item">
+				<div class="img-bg" style="background-image:url(images/5571.jpg);">
+				</div>
+			<div class="img-content">
+				<div class="name">
+				</div>
+				<div class="description">
+					<p>Variety :<p class="variety"></p><br><br>
+					   Style :<p class = "style"></p><br><br>
+					   Country :<p class = "country"></p><br><br>
+					   Stars :<p class = "stars"></p><br><br>
+					   Top10 :<p class = "topten"></p>	
+					</p>
+				</div>
+			</div>
+			</div>
+			<div class="item">
+				<div class="img-bg" style="background-image:url(images/5571.jpg);">
+				</div>
+			<div class="img-content">
+				<div class="name">
+				</div>
+				<div class="description">
+					<p>Variety :<p class="variety"></p><br><br>
+					   Style :<p class = "style"></p><br><br>
+					   Country :<p class = "country"></p><br><br>
+					   Stars :<p class = "stars"></p><br><br>
+					   Top10 :<p class = "topten"></p>	
+					</p>
+				</div>
+			</div>
+			</div>
+			<div class="item">
+				<div class="img-bg" style="background-image:url(images/5571.jpg);">
+				</div>
+			<div class="img-content">
+				<div class="name">
+				</div>
+				<div class="description">
+					<p>Variety :<p class="variety"></p><br><br>
+					   Style :<p class = "style"></p><br><br>
+					   Country :<p class = "country"></p><br><br>
+					   Stars :<p class = "stars"></p><br><br>
+					   Top10 :<p class = "topten"></p>	
+					</p>
+				</div>
+			</div>
+			</div>
+			<div class="item">
+				<div class="img-bg" style="background-image:url(images/5571.jpg);">
+				</div>
+			<div class="img-content">
+				<div class="name">
+				</div>
+				<div class="description">
+					<p>Variety :<p class="variety"></p><br><br>
+					   Style :<p class = "style"></p><br><br>
+					   Country :<p class = "country"></p><br><br>
+					   Stars :<p class = "stars"></p><br><br>
+					   Top10 :<p class = "topten"></p>	
+					</p>
+				</div>
+			</div>
+			</div>
+			<div class="item">
+				<div class="img-bg" style="background-image:url(images/5571.jpg);">
+				</div>
+			<div class="img-content">
+				<div class="name">
+				</div>
+				<div class="description">
+					<p>Variety :<p class="variety"></p><br><br>
+					   Style :<p class = "style"></p><br><br>
+					   Country :<p class = "country"></p><br><br>
+					   Stars :<p class = "stars"></p><br><br>
+					   Top10 :<p class = "topten"></p>	
+					</p>
+				</div>
+			</div>
+			</div>
+			<div class="item">
+				<div class="img-bg" style="background-image:url(images/5571.jpg);">
+				</div>
+			<div class="img-content">
+				<div class="name">
+				</div>
+				<div class="description">
+					<p>Variety :<p class="variety"></p><br><br>
+					   Style :<p class = "style"></p><br><br>
+					   Country :<p class = "country"></p><br><br>
+					   Stars :<p class = "stars"></p><br><br>
+					   Top10 :<p class = "topten"></p>	
+					</p>
+				</div>
+			</div>
+			</div>
+			<div class="item">
+				<div class="img-bg" style="background-image:url(images/5571.jpg);">
+				</div>
+			<div class="img-content">
+				<div class="name">
+				</div>
+				<div class="description">
+					<p>Variety :<p class="variety"></p><br><br>
+					   Style :<p class = "style"></p><br><br>
+					   Country :<p class = "country"></p><br><br>
+					   Stars :<p class = "stars"></p><br><br>
+					   Top10 :<p class = "topten"></p>	
+					</p>
+				</div>
+			</div>
+			</div>
+			<div class="item">
+				<div class="img-bg" style="background-image:url(images/5571.jpg);">
+				</div>
+			<div class="img-content">
+				<div class="name">
+				</div>
+				<div class="description">
+					<p>Variety :<p class="variety"></p><br><br>
+					   Style :<p class = "style"></p><br><br>
+					   Country :<p class = "country"></p><br><br>
+					   Stars :<p class = "stars"></p><br><br>
+					   Top10 :<p class = "topten"></p>	
+					</p>
+				</div>
+			</div>
+			</div>
+			<div class="item">
+				<div class="img-bg" style="background-image:url(images/5571.jpg);">
+				</div>
+			<div class="img-content">
+				<div class="name">
+				</div>
+				<div class="description">
+					<p>Variety :<p class="variety"></p><br><br>
+					   Style :<p class = "style"></p><br><br>
+					   Country :<p class = "country"></p><br><br>
+					   Stars :<p class = "stars"></p><br><br>
+					   Top10 :<p class = "topten"></p>	
+					</p>
+				</div>
+			</div>
+			</div>
+			<div class="item">
+				<div class="img-bg" style="background-image:url(images/5571.jpg);">
+				</div>
+			<div class="img-content">
+				<div class="name">
+				</div>
+				<div class="description">
+					<p>Variety :<p class="variety"></p><br><br>
+					   Style :<p class = "style"></p><br><br>
+					   Country :<p class = "country"></p><br><br>
+					   Stars :<p class = "stars"></p><br><br>
+					   Top10 :<p class = "topten"></p>	
+					</p>
+				</div>
+			</div>
+			</div>
+			<div class="item">
+				<div class="img-bg" style="background-image:url(images/5571.jpg);">
+				</div>
+			<div class="img-content">
+				<div class="name">
+				</div>
+				<div class="description">
+					<p>Variety :<p class="variety"></p><br><br>
+					   Style :<p class = "style"></p><br><br>
+					   Country :<p class = "country"></p><br><br>
+					   Stars :<p class = "stars"></p><br><br>
+					   Top10 :<p class = "topten"></p>	
+					</p>
+				</div>
+			</div>
+			</div>
+			<div class="item">
+				<div class="img-bg" style="background-image:url(images/5571.jpg);">
+				</div>
+			<div class="img-content">
+				<div class="name">
+				</div>
+				<div class="description">
+					<p>Variety :<p class="variety"></p><br><br>
+					   Style :<p class = "style"></p><br><br>
+					   Country :<p class = "country"></p><br><br>
+					   Stars :<p class = "stars"></p><br><br>
+					   Top10 :<p class = "topten"></p>	
+					</p>
+				</div>
+			</div>
+			</div>
+			<div class="item">
+				<div class="img-bg" style="background-image:url(images/5571.jpg);">
+				</div>
+			<div class="img-content">
+				<div class="name">
+				</div>
+				<div class="description">
+					<p>Variety :<p class="variety"></p><br><br>
+					   Style :<p class = "style"></p><br><br>
+					   Country :<p class = "country"></p><br><br>
+					   Stars :<p class = "stars"></p><br><br>
+					   Top10 :<p class = "topten"></p>	
+					</p>
+				</div>
+			</div>
+			</div>
+			<div class="item">
+				<div class="img-bg" style="background-image:url(images/5571.jpg);">
+				</div>
+			<div class="img-content">
+				<div class="name">
+				</div>
+				<div class="description">
+					<p>Variety :<p class="variety"></p><br><br>
+					   Style :<p class = "style"></p><br><br>
+					   Country :<p class = "country"></p><br><br>
+					   Stars :<p class = "stars"></p><br><br>
+					   Top10 :<p class = "topten"></p>	
+					</p>
+				</div>
+			</div>
+			</div>
+			<div class="item">
+				<div class="img-bg" style="background-image:url(images/5571.jpg);">
+				</div>
+			<div class="img-content">
+				<div class="name">
+				</div>
+				<div class="description">
+					<p>Variety :<p class="variety"></p><br><br>
+					   Style :<p class = "style"></p><br><br>
+					   Country :<p class = "country"></p><br><br>
+					   Stars :<p class = "stars"></p><br><br>
+					   Top10 :<p class = "topten"></p>	
+					</p>
+				</div>
+			</div>
+			</div>
+			<div class="item">
+				<div class="img-bg" style="background-image:url(images/5571.jpg);">
+				</div>
+			<div class="img-content">
+				<div class="name">
+				</div>
+				<div class="description">
+					<p>Variety :<p class="variety"></p><br><br>
+					   Style :<p class = "style"></p><br><br>
+					   Country :<p class = "country"></p><br><br>
+					   Stars :<p class = "stars"></p><br><br>
+					   Top10 :<p class = "topten"></p>	
+					</p>
+				</div>
+			</div>
+			</div>
+			<div class="item">
+				<div class="img-bg" style="background-image:url(images/5571.jpg);">
+				</div>
+			<div class="img-content">
+				<div class="name">
+				</div>
+				<div class="description">
+					<p>Variety :<p class="variety"></p><br><br>
+					   Style :<p class = "style"></p><br><br>
+					   Country :<p class = "country"></p><br><br>
+					   Stars :<p class = "stars"></p><br><br>
+					   Top10 :<p class = "topten"></p>	
+					</p>
+				</div>
+			</div>
+			</div>
+			<div class="item">
+				<div class="img-bg" style="background-image:url(images/5571.jpg);">
+				</div>
+			<div class="img-content">
+				<div class="name">
+				</div>
+				<div class="description">
+					<p>Variety :<p class="variety"></p><br><br>
+					   Style :<p class = "style"></p><br><br>
+					   Country :<p class = "country"></p><br><br>
+					   Stars :<p class = "stars"></p><br><br>
+					   Top10 :<p class = "topten"></p>	
+					</p>
+				</div>
+			</div>
+			</div>
+			<div class="item">
+				<div class="img-bg" style="background-image:url(images/5571.jpg);">
+				</div>
+			<div class="img-content">
+				<div class="name">
+				</div>
+				<div class="description">
+					<p>Variety :<p class="variety"></p><br><br>
+					   Style :<p class = "style"></p><br><br>
+					   Country :<p class = "country"></p><br><br>
+					   Stars :<p class = "stars"></p><br><br>
+					   Top10 :<p class = "topten"></p>	
+					</p>
+				</div>
+			</div>
+			</div>
+			<div class="item">
+				<div class="img-bg" style="background-image:url(images/5571.jpg);">
+				</div>
+			<div class="img-content">
+				<div class="name">
+				</div>
+				<div class="description">
+					<p>Variety :<p class="variety"></p><br><br>
+					   Style :<p class = "style"></p><br><br>
+					   Country :<p class = "country"></p><br><br>
+					   Stars :<p class = "stars"></p><br><br>
+					   Top10 :<p class = "topten"></p>	
+					</p>
+				</div>
+			</div>
+			</div>
+			<div class="item">
+				<div class="img-bg" style="background-image:url(images/5571.jpg);">
+				</div>
+			<div class="img-content">
+				<div class="name">
+				</div>
+				<div class="description">
+					<p>Variety :<p class="variety"></p><br><br>
+					   Style :<p class = "style"></p><br><br>
+					   Country :<p class = "country"></p><br><br>
+					   Stars :<p class = "stars"></p><br><br>
+					   Top10 :<p class = "topten"></p>	
+					</p>
+				</div>
+			</div>
+			</div>
+			<div class="item">
+				<div class="img-bg" style="background-image:url(images/5571.jpg);">
+				</div>
+			<div class="img-content">
+				<div class="name">
+				</div>
+				<div class="description">
+					<p>Variety :<p class="variety"></p><br><br>
+					   Style :<p class = "style"></p><br><br>
+					   Country :<p class = "country"></p><br><br>
+					   Stars :<p class = "stars"></p><br><br>
+					   Top10 :<p class = "topten"></p>	
+					</p>
+				</div>
+			</div>
+			</div>
+			<div class="item">
+				<div class="img-bg" style="background-image:url(images/5571.jpg);">
+				</div>
+			<div class="img-content">
+				<div class="name">
+				</div>
+				<div class="description">
+					<p>Variety :<p class="variety"></p><br><br>
+					   Style :<p class = "style"></p><br><br>
+					   Country :<p class = "country"></p><br><br>
+					   Stars :<p class = "stars"></p><br><br>
+					   Top10 :<p class = "topten"></p>	
+					</p>
 				</div>
 			</div>
 			</div>
 		</div>
 	</div>
-	
-	</div>
-
-	
 	<script>
 		const items = document.querySelectorAll('.item');
 		items.forEach(item => {
@@ -184,13 +627,9 @@
 				item.childNodes[1].classList.remove('img-darken');
 			})
 		})
-		
 	</script>
-	<p id='demo'></p>
-	<script>
-		var txt = https://neilrathi17.github.io/test1/ramen.json;
-		var obj = JSON.parse(txt);
-		document.getElementById("demo").innerHTML = obj.Brand + " "+obj.style;
-	</script>
+	<p class="q"></p>
+	<script src="top.js"></script>
+	<script src="search.js"></script>
 </body>
 </html>
