--- a/Shouryan_Sharma/top ramen - Copy/index.html
+++ b/Shouryan_Sharma/top ramen - Copy/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Top Rahmen</title>
+	<title>home</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
 				    <a href="index.html">home</a>
 			    </div>
 			    <div class="home">	
-			        <a href="index.html">about</a>
+			        <a href="about.html">about</a>
 			    </div>
 		   </div>
 	        <div class="right">
