--- a/Shouryan_Sharma/top ramen - Copy/about.html
+++ b/Shouryan_Sharma/top ramen - Copy/about.html
@@ -13,7 +13,7 @@
 				    <a href="index.html">home</a>
 			    </div>
 			    <div class="home">	
-			        <a href="index.html">about</a>
+			        <a href="about.html">about</a>
 			    </div>
 		   </div>
 	        <div class="right">
@@ -27,10 +27,10 @@
         <img src="images/5571.jpg" >
         </div>
         <div class="text">
-            <h1 class="heading">Thanks for visiting this website</h1>
-            <p class="noodle">Ramen are thin, wheat-based noodles made from wheat flour, salt, water, and kansui, a form of alkaline water. The dough is risen before being rolled.
+            <h1 class="heading">  Thanks for visiting this website</h1>
+            <p class="noodle">  Ramen are thin, wheat-based noodles made from wheat flour, salt, water, and kansui, a form of alkaline water. The dough is risen before being rolled.
             </p><br><br>
-            <p class="noodle">Most noodles are made from four basic ingredients: wheat flour, salt, water, and kansui (かん水) (from kansui (鹹水, salt water)) a type of alkaline mineral water, containing sodium carbonate and usually potassium carbonate, as well as sometimes a small amount of phosphoric acid.</p>
+            <p class="noodle">  Most noodles are made from four basic ingredients: wheat flour, salt, water, and kansui (かん水) (from kansui (鹹水, salt water)) a type of alkaline mineral water, containing sodium carbonate and usually potassium carbonate, as well as sometimes a small amount of phosphoric acid.</p>
 
         </div>
         </div>
