--- a/Shouryan_Sharma/top ramen - Copy/index.html
+++ b/Shouryan_Sharma/top ramen - Copy/index.html
@@ -17,7 +17,7 @@
 			    </div>
 		   </div>
 	        <div class="right">
-		        <input class="Searchbar" onkeyup="search()" name="search" type="text" placeholder=" Search..">
+		        <input class="Searchbar" name="search" type="text" onkeyup="search()" placeholder=" Search..">
 		    </div>
 		</div>
 		</div>
