--- a/Neil_Rathi/ramen.html
+++ b/Neil_Rathi/ramen.html
@@ -17,7 +17,7 @@
  	<div id="container">
  		<ul>
  			<li><span id="home"> <i class="fas fa-home fa-lg"></i> </span></li>
- 			<li><input type="text" name="search" placeholder="search by name"></li>
+ 			<li><input type="text" id="search" name="search" placeholder="search by name" onkeyup="search()"></li>
  			<li> <select id="sort" placeholder='sort by' onchange="sort()" class="dropbtn"> 
  		 	<option value="none" selected disabled hidden> 
           Sort By: 
