--- a/Shakti_Balaji/index.html
+++ b/Shakti_Balaji/index.html
@@ -17,7 +17,6 @@
     <div class = "nav">
     <ul>
         <li><button id = "showall" class = "dropdown">Show all</button></li>
-        
         <li>
             <select id = "country" onchange="loc()" class = "dropdown">
                 <option disabled hidden selected>Country</option>
@@ -39,7 +38,7 @@
                 <option disabled hidden selected>Top 10 of year</option>
                 <option>None</option>
                 <option>2016</option>
-                <option>2015</option>
+                <option>2015</option> 
                 <option>2014</option>
                 <option>2013</option>
                 <option>2012</option>
@@ -54,8 +53,10 @@
             </select>
         </li>
     </ul>
+    <br>
     <div class = "form">
-        <input type="text" id = "name" placeholder="Search restaurant by name...">
+        <i class = "fa fa-search"></i>
+        <input type="text" id = "name" placeholder="Search for a restaurant...">
     </div>
     </div>
     <br>
