--- a/Shouryan_Sharma/top ramen - Copy/about.html
+++ b/Shouryan_Sharma/top ramen - Copy/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
+	<meta name="top_rahmen" content="width=device-width, initial-scale=1.0">
 	<title>about</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -35,6 +35,12 @@
         </div>
         </div>
 
-    </div>
+	</div>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js">
+	</script>
+	<script
+	src="https://code.jquery.com/jquery-3.5.1.js"
+	integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+	crossorigin="anonymous"></script>
 </body>
 </html>
