--- a/Shouryan_Sharma/top ramen - Copy/index.html
+++ b/Shouryan_Sharma/top ramen - Copy/index.html
@@ -4,6 +4,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 	<title>home</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 	<script src="https://www.w3schools.com/lib/w3.js"></script> 
 </head>
 <body>
@@ -54,10 +56,10 @@
 				<div class="img-bg" style="background-image:url(images/5571.jpg);">
 				</div>
 			<div class="img-content">
-				<div class="name">
-				</div>
+				<p class="name">
+				</p>
 				<div class="description">
-					<p>Variety :<p class="variety"></p><br><br>
+					<p class="dcon">Variety :<p class="variety"></p><br><br>
 					   Style :<p class = "style"></p><br><br>
 					   Country :<p class = "country"></p><br><br>
 					   Stars :<p class = "stars"></p><br><br>
